# geopaint.app

./: CONTRIBUTING.md  Cargo.toml  LEGAL.md  README.md  SECURITY.md  netlify.toml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  proposal.yml
.github/workflows/: rust-test.yml
geopaint-editor/: .gitignore  Cargo.toml  README.md  Trunk.toml  build-site.sh
geopaint-editor/src/lib/: lib.rs  routes.rs
geopaint-editor/src/lib/browser/: mod.rs  navigator.rs
geopaint-editor/src/lib/canvas/: basic.frag  basic.vert  component.rs  mod.rs
geopaint-editor/src/lib/pages/: editor.rs  home.rs  mod.rs  not_found.rs  print.rs
geopaint-editor/src/static/: index.html
geopaint-editor/src/static/assets/: style.css
